# hotspot

./: .env.example  main.py  pyproject.toml
app/: main.py
app/core/: config.py  logging.py
app/db/: database.py
app/models/: __init__.py  plan.py  router.py
app/routers/: mikrotik.py  router.py
app/schemas/: plan.py  router.py
app/services/: mikrotik_service.py  router_service.py
